--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  url_launcher: ^6.0.6
+
 
 dev_dependencies:
   flutter_test:
